crates/plotnik-tests/tests/02-parser/recovery_validation/multiple_anchors_in_alternation.txt
Q = [
  .
  (a)
  .
  (b)
  .
]
------------------ DIAGNOSTICS -------------------
error: anchors cannot appear directly in alternations
 --> query.ptk:2:3
  |
2 |   .
  |   ^
  |
help: use `[{(a) . (b)} (c)]` to anchor within an alternative

error: anchors cannot appear directly in alternations
 --> query.ptk:4:3
  |
4 |   .
  |   ^
  |
help: use `[{(a) . (b)} (c)]` to anchor within an alternative

error: anchors cannot appear directly in alternations
 --> query.ptk:6:3
  |
6 |   .
  |   ^
  |
help: use `[{(a) . (b)} (c)]` to anchor within an alternative
